--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "express": "^4.17.1",
     "express-sanitizer": "^1.0.5",
     "express-session": "^1.16.2",
+    "google-auth-library": "^5.7.0",
+    "googleapis": "^39.2.0",
     "method-override": "^3.0.0",
     "mongoose": "^5.6.0",
     "morgan": "^1.9.1",
-    "nodemailer": "^6.3.0",
+    "nodemailer": "^6.4.2",
     "nodemailer-smtp-transport": "^2.7.4",
     "path": "^0.12.7",
     "randomstring": "^1.1.5",
